refactor: swagger for reset password
