# controllers/user.controller.js
@@ -144,6 +144,7 @@ class UserController {
         });
         return;
       }
+      // console.log(req.headers.authorization);
       const header = req.headers.authorization;
       const myArr = header.split(" ");
       const token = myArr[1];
